# unit-enum

./: Cargo.toml  LICENSE  README.md
src/: analyze.rs  codegen.rs  lib.rs  lower.rs  parse.rs
tests/: failing.rs  succes.rs
tests/fail_cases/: derive_from_struct.rs  derive_from_struct.stderr
