[package]
name = "unit-enum"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro-error = "1.0.4"

[dev-dependencies]
trybuild = "1"
syn = { version = "1.0", features = ["extra-traits"] }
